# library_api

./: .gitignore  Cargo.toml  Makefile  README.md  api.openapi.yml
.github/workflows/: rust.yml
src/: api_keys.rs  books.rs  config.rs  errors.rs  init.rs  lib.rs  server.rs
src/api_keys/: api_keys_application.rs  api_keys_domain.rs  api_keys_infrastructure.rs  errors.rs
src/api_keys/api_keys_infrastructure/: api_key_sqlite_repository.rs  cli.rs  middlewares.rs  singletons.rs
src/books/: books_application.rs  books_domain.rs  books_infrastructure.rs  errors.rs
src/books/books_application/: create_book_use_case.rs  delete_book_use_case.rs  get_book_by_id_use_case.rs  get_books_use_case.rs  search_books_use_case.rs  update_book_use_case.rs
src/books/books_domain/: books.rs  utils.rs
src/books/books_infrastructure/: books_sqlite_repository.rs  controllers.rs  db_dtos.rs  singletons.rs
tests/: integration.rs
